# tnco

./: .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  README.md  environment.yml  pyproject.toml
.binder/: environment.yml
.github/workflows/: check_format.yml  cpp_linter.yml  run_tests.yml
examples/: Optimization.ipynb
include/tnco/: assert.hpp  bitset.hpp  ctree.hpp  fixed_float.hpp  globals.hpp  main.cpp  node.hpp  tree.hpp  utils.hpp
include/tnco/optimize/: main.hpp  optimizer.hpp
include/tnco/optimize/finite_width/: main.hpp  utils.hpp
include/tnco/optimize/finite_width/cost_model/: base.hpp  main.hpp  simple.hpp  simple_sparse_inds.hpp
include/tnco/optimize/finite_width/greedy/: main.hpp  optimizer.hpp  utils.hpp
include/tnco/optimize/infinite_memory/: main.hpp  optimizer.hpp  utils.hpp
include/tnco/optimize/infinite_memory/cost_model/: base.hpp  main.hpp  simple.hpp  simple_sparse_inds.hpp
include/tnco/optimize/prob/: base.hpp  greedy.hpp  main.hpp  mh.hpp  sa.hpp
scripts/: boost.cmake  check_format.sh  cpp_linter.sh  mpfr.cmake  pybind11.cmake  tools.cmake
tests/: conftest.py  test_app.py  test_circuit.py  test_contraction.py  test_core.py  test_utils.py
tnco/: __init__.py  bitset.py  ctree.py  ordered_frozenset.py  parallel.py  typing.py
tnco/app/: __init__.py  app.py  cli.py  tn.py
tnco/app/circuit/: __init__.py  sampling.py
tnco/app/finite_width/: __init__.py  sa.py
tnco/app/infinite_memory/: __init__.py  sa.py
tnco/optimize/: __init__.py  prob.py
tnco/optimize/finite_width/: __init__.py  cost_model.py  optimizer.py
tnco/optimize/infinite_memory/: __init__.py  cost_model.py  optimizer.py
tnco/testing/: __init__.py  utils.py
tnco/tests/: utils.py
tnco/utils/: __init__.py  circuit.py  tensor.py  tn.py
