# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
  "scikit-build-core>=0.8.0",
  "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "tnco"
description = "Tensor Network Contraction Optimizer (TNCO)"
version = "0.1"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Salvatore Mandra", email = "smandra@google.com" }
]
keywords = [
  "tensor",
  "tensor-network",
  "optimizer"
]
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Unix",
]
dependencies = [
  "autoray",
  "fire",
  "more_itertools",
  "pathvalidate",
  "rich"
]

[project.optional-dependencies]
parallel = [
  "joblib"
]
formatting = [
  "clang-format==19.1.3",
  "yapf==0.43.0",
  "isort"
]
testing = [
  "cirq",
  "numpy",
  "ply",
  "pytest",
  "pytest-timeout",
  "pytest-xdist",
  "qiskit",
  "quimb",
  "ruff"
]
all = [
  "tnco[parallel,testing,formatting]"
]

[project.scripts]
tnco = "tnco.app.cli:main"
